--- a/pom.xml
+++ b/pom.xml
@@ -113,16 +113,21 @@
         </dependency>
 
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>2.0.16</version>
-<!--            <scope>test</scope>-->
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.5.16</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>2.0.16</version>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.15</version>
+<!--            <scope>test</scope>-->
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.slf4j</groupId>-->
+<!--            <artifactId>slf4j-log4j12</artifactId>-->
+<!--            <version>2.0.16</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>ca.uhn.hapi.fhir</groupId>
